Update name in header to 'Sophie Jennings'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <h1>Hi! I'm [Your Name]</h1>
+    <h1>Hi! I'm Sophie Jennings</h1>
+    <img src="_MGL7843.jpg" alt="My Photo" width="200">
     <p>Welcome to my portfolio!</p>
     <ul>
         <li>About Me</li>
