Revise portfolio title and project list
Updated the title and added project details to the portfolio.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Portfolio</title>
+    <title>Sophie Jennings Portfolio</title>
 </head>
 <body>
     <h1>Hi! I'm Sophie Jennings</h1>
+
+    <!-- Make sure the file name matches exactly -->
     <img src="_MGL7843.jpg" alt="My Photo" width="200">
+
     <p>Welcome to my portfolio!</p>
+
+    <h2>About Me</h2>
+    <p>I’m a student learning web development and creating my first portfolio!</p>
+
+    <h2>Projects</h2>
     <ul>
-        <li>About Me</li>
-        <li>Projects</li>
-        <li>Contact</li>
+        <li>Project 1</li>
+        <li>Project 2</li>
+        <li>Project 3</li>
     </ul>
+
+    <h2>Contact</h2>
+    <p>Email me at: sophiej321@icloud.com</p>
 </body>
 </html>
