Update image source to use a URL

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <h1>Hi! I'm Sophie Jennings</h1>
 
     <!-- Make sure the file name matches exactly -->
-    <img src="_MGL7843.jpg" alt="My Photo" width="200">
+    <img src="https://raw.githubusercontent.com/sophiej432/my-portfolio/main/_MGL7843.jpg" alt="My Photo" width="200">
+
 
     <p>Welcome to my portfolio!</p>
 
