--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>Hi! I'm Sophie Jennings</h1>
 
     <!-- Make sure the file name matches exactly -->
-    <img src="main/_MGL7843.jpg" alt="My Photo" width="200">
+    <img src="_MGL7843.jpg" alt="My Photo" width="200">
 
 
     <p>Welcome to my portfolio!</p>
