Add link to style.css in index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>Sophie Jennings Portfolio</title>
+    style.css
 </head>
 <body>
     <h1>Hi! I'm Sophie Jennings</h1>
-
+    
     <!-- Make sure the file name matches exactly -->
     <img src="photo1.jpg" alt="My Photo" width="200">
 
