Refactor index.html for new portfolio layout
Updated the structure and content of the portfolio page.

--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sophie Jennings Portfolio</title>
+
+    <!-- Link Google Fonts for nice typography -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
+
+    <!-- Link your CSS file -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hi! I'm Sophie Jennings</h1>
-    
-    <!-- Make sure the file name matches exactly -->
-    <img src="photo1.jpg" alt="My Photo" width="200">
+    <div class="container">
+        <header>
+            <h1 class="logo">Sophie J</h1>
+        </header>
 
+        <main>
+            <div class="text">
+                <h2>WEBSITE DROPPING SOON</h2>
+                <p>My new Portfolio is COMING SOON</p>
+                <button>CONTACT US</button>
+            </div>
 
-    <p>Welcome to my portfolio!</p>
-
-    <h2>About Me</h2>
-    <p>I’m a student learning web development and creating my first portfolio!</p>
-
-    <h2>Projects</h2>
-    <ul>
-        <li>Project 1</li>
-        <li>Project 2</li>
-        <li>Project 3</li>
-    </ul>
-
-    <h2>Contact</h2>
-    <p>Email me at: sophiej321@icloud.com</p>
+            <div class="image-box">
+                <img src="photo1.jpg" alt="Sophie photo">
+            </div>
+        </main>
+    </div>
 </body>
 </html>
