Revise index.html for portfolio updates
Updated the HTML structure and content for the portfolio page.

--- a/index.html
+++ b/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sophie Jennings Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sophie J</title>
 
-    <!-- Link Google Fonts for nice typography -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
-    <!-- Link your CSS file -->
-    <link rel="stylesheet" href="style.css">
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1 class="logo">Sophie J</h1>
-        </header>
-
-        <main>
-            <div class="text">
-                <h2>WEBSITE DROPPING SOON</h2>
-                <p>My new Portfolio is COMING SOON</p>
-                <button>CONTACT US</button>
-            </div>
-
-            <div class="image-box">
-                <img src="photo1.jpg" alt="Sophie photo">
-            </div>
-        </main>
+  <div class="card">
+    <div class="text">
+      <h1>Sophie J & Co.</h1>
+      <h2>WEBSITE DROPPING SOON</h2>
+      <p>My new portfolio is coming soon! Stay tuned for updates and exciting projects.</p>
+      <button>CONTACT US</button>
     </div>
+    <div class="image">
+      <img src="yourphoto.jpg" alt="Sophie Photo">
+    </div>
+  </div>
 </body>
 </html>
+
