Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button>CONTACT US</button>
     </div>
     <div class="image">
-      <img src="yourphoto.jpg" alt="Sophie Photo">
+      <img src="photo1.jpg" alt="Sophie Photo">
     </div>
   </div>
 </body>
