--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="style.css" href="style.css" />
 </head>
 <body>
   <div class="card">
     <div class="text">
-      <h1>Sophie J & Co.</h1>
+      <h1>Sophie Jennings Portfolio</h1>
       <h2>WEBSITE DROPPING SOON</h2>
       <p>My new portfolio is coming soon! Stay tuned for updates and exciting projects.</p>
-      <button>CONTACT US</button>
+      <button>CONTACT ME</button>
     </div>
     <div class="image">
       <img src="photo1.jpg" alt="Sophie Photo">
