Update title and heading in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sophie J</title>
+  <title>Sophie J Portfolio</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
   <div class="card">
     <div class="text">
-      <h1>Sophie Jennings Portfolio</h1>
+      <h1>Welcome</h1>
       <h2>WEBSITE DROPPING SOON</h2>
       <p>My new portfolio is coming soon! Stay tuned for updates and exciting projects.</p>
       <button>CONTACT ME</button>
