Replace button with multiple links in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       <h1>Welcome</h1>
       <h2>WEBSITE DROPPING SOON</h2>
       <p>My new portfolio is coming soon! Stay tuned for updates and exciting projects.</p>
-      <button>CONTACT ME</button>
+      <div class="buttons">
+      <a href="#" class="btn">ABOUT ME</a>
+      <a href="#" class="btn">PROJECTS</a>
+      <a href="#" class="btn">CONTACT ME</a>
+    </div>
     </div>
     <div class="image">
       <img src="photo2.jpg" alt="Sophie Photo">
