--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
       <h1>Welcome</h1>
       <h2>WEBSITE DROPPING SOON</h2>
       <p>My new portfolio is coming soon! Stay tuned for updates and exciting projects.</p>
-      <div class="buttons">
-      <a href="#" class="btn">ABOUT ME</a>
-      <a href="#" class="btn">PROJECTS</a>
-      <a href="#" class="btn">CONTACT ME</a>
-    </div>
+      <div class="button-group">
+       <div class="button-group">
+        <a href="about.html" class="btn">ABOUT ME</a>
+        <a href="projects.html" class="btn">PROJECTS</a>
+        <a href="#" class="btn">CONTACT ME</a>
+      </div>
     </div>
     <div class="image">
       <img src="photo2.jpg" alt="Sophie Photo">
