Update welcome message to include exclamation mark

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="card">
     <div class="text">
-      <h1>Welcome</h1>
+      <h1>Welcome!</h1>
       <h2>WEBSITE DROPPING SOON</h2>
       <p>My new portfolio is coming soon! Stay tuned for updates and exciting projects.</p>
       <div class="button-group">
