--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <div class="button-group">
         <a href="about.html" class="btn">ABOUT ME</a>
         <a href="projects.html" class="btn">PROJECTS</a>
-        <a href="#" class="btn">CONTACT ME</a>
+        <a href="contact.html" class="btn">CONTACT ME</a>
       </div>
     </div>
     <div class="image">
