--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,19 @@
   <div class="card">
     <div class="text">
       <h1>Contact Me</h1>
-      <p>This is the Contact Me page. You can include a form, email link, or any contact information here.</p>
+      <p>Fill out the form below to get in contact with me</p>
+      <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="5" required></textarea><br><br>
+
+        <button type="submit">Send Message</button>
+      </form>
       <a href="index.html" class="btn">Back to Home</a>
     </div>
   </div>
