--- a/projects.html
+++ b/projects.html
@@ -7,10 +7,31 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
   <div class="card">
-    <div class="text">
-      <h1>Projects</h1>
-      <p>This is the Projects page. Showcase your work, portfolio, or examples of your projects here.</p>
+  <div class="text">
+    <h1>Projects</h1>
+    <p>Here are some of my projects:</p>
+
+    <div class="projects-grid">
+      <div class="project-card">
+        <h3>Project 1</h3>
+        <p>Short description of project 1.</p>
+      </div>
+      <div class="project-card">
+        <h3>Project 2</h3>
+        <p>Short description of project 2.</p>
+      </div>
+      <div class="project-card">
+        <h3>Project 3</h3>
+        <p>Short description of project 3.</p>
+      </div>
+    </div>
+
+    <a href="index.html" class="btn" style="margin-top:20px;">Back to Home</a>
+  </div>
+</div>
+
       <a href="index.html" class="btn">Back to Home</a>
     </div>
   </div>
