--- a/about.html
+++ b/about.html
@@ -11,6 +11,9 @@
     <div class="text">
       <h1>About Me</h1>
       <p>This is the About Me page. You can add your biography, background, skills, or anything you want here.</p>
+       <div class="image">
+      <img src="photo1.jpg" alt="Sophie Photo">
+    </div>
       <a href="index.html" class="btn">Back to Home</a>
     </div>
   </div>
