--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,9 @@
     <div class="text">
       <h1>Contact Me</h1>
       <p>Fill out the form below to get in contact with me</p>
-      <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+
+      <!-- Formspree form -->
+      <form action="https://formspree.io/f/mgvpbqrj" method="POST">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name" required><br><br>
 
@@ -23,8 +25,29 @@
 
         <button type="submit">Send Message</button>
       </form>
-      <a href="index.html" class="btn">Back to Home</a>
+
+      <a href="index.html" class="btn" style="margin-top:20px;">Back to Home</a>
     </div>
   </div>
+
+  <!-- Optional: JavaScript for success alert -->
+  <script>
+    const form = document.querySelector('form');
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      fetch(form.action, {
+        method: form.method,
+        body: new FormData(form),
+        headers: { 'Accept': 'application/json' }
+      }).then(response => {
+        if (response.ok) {
+          alert('Thank you! Your message has been sent.');
+          form.reset();
+        } else {
+          alert('Oops! There was a problem submitting your form');
+        }
+      });
+    });
+  </script>
 </body>
 </html>
